--- a/Practise_Javascript/practise1.html
+++ b/Practise_Javascript/practise1.html
@@ -2,10 +2,10 @@
     <head>
         <title>Practise Day 1</title>
        
-        <link href="style.css" rel="stylesheet">
+        <link href="style1.css" rel="stylesheet">
     </head>
     <body >
-        <script src="script.js"></script>
+        <script src="script1.js"></script>
 
     <h1> JavaScript Fundamentals<br>
         Suraj Study Material!!!</h1> 
